<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#d6fadf"
    tools:context=".BlankFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addIngredientsButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CEE0E6 "
        tools:context=".BlankFragment">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#d6fadf"
            android:ems="10"
            android:fontFamily="@font/open_sans_light"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:textColor="#27283c"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/button3"
            android:layout_width="370dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#abe2c7"
            android:text="@string/confirm_button"
            android:textColor="#27283c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.426"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="375dp"
            android:layout_height="150dp"
            android:layout_marginBottom="228dp"
            android:background="#d6fadf"
            android:ems="10"
            android:fontFamily="@font/open_sans_light"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="#27283c"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/method_title"
            android:textColor="#27283c"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:background="#d6fadf"
            android:ems="10"
            android:fontFamily="@font/open_sans_light"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:textColor="#27283c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/description_textView"
            android:textColor="#27283c"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="375dp"
            android:layout_height="200dp"
            android:background="#d6fadf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#abe2c7"
            android:foregroundTint="#abe2c7"
            android:text="@string/add_button"
            android:textColor="#27283c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="88dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/title_textView"
            android:textColor="#27283c"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/ingredients_textView"
            android:textColor="#27283c"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:max="5"
            android:numStars="5"
            android:progressBackgroundTint="#d6fadf"
            android:progressTint="#abe2c7"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
            app:layout_constraintVertical_bias="0.863" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/rating_string"
            android:textColor="#27283c"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView2"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>