<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="match_parent"
        android:background="#CEE0E6 "
        tools:context=".ViewFragment">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="375dp"
            android:layout_height="85dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pt_sans"
            android:textColor="#45496A"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:textColor="#45496A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_view"
            android:layout_width="375dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="#EAD4D4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/ingredients_text"
            android:textColor="#45496A"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/quantity_text"
            android:textColor="#45496A"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/method_notes_text"
            android:textColor="#45496A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_view" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="375dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:background="#EAD4D4"
            android:fontFamily="@font/open_sans_light"
            android:scrollbars="vertical"
            android:textColor="#45496A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/rating_text"
            android:textColor="#45496A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:layout_marginStart="16dp"
            android:backgroundTint="#FFFFFF"
            android:progressBackgroundTint="#EAD4D4"
            android:progressTint="#F5C0BF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>